Skip to content

HLS video playback fails

With the following playlist file: http://devimages.apple.com/iphone/samples/bipbop/bipbopall.m3u8

Only the first picture is displayed, afterwards the display is not updated.

Sound is working properly ("bip" and "bop" sounds).

Result of bisection:

commit 35deef0686f084e477d10cbb15d49cad50a159c1
Author: Rémi Denis-Courmont <remi@remlab.net>
Date:   Sun Nov 10 18:06:38 2013 +0200

    input: get PTS delay from stream rather than access (fixes [#8457](https://code.videolan.org/videolan/vlc/-/issues/8457))

Log is enclosed, there are many entries like this one:

avcodec error: more than 5 seconds of late video -> dropping frame
main warning: picture is too late to be displayed (missing 544 ms)
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information