stream_filter: rectify PTS delay unit (fix #10748)