modules/stream_filter/dash/dash.cpp
@@ -29,6 +29,9 @@
 # include "config.h"
 #endif
 
+#define __STDC_CONSTANT_MACROS 1
+#include <stdint.h>
+
 #include <vlc_common.h>
 #include <vlc_plugin.h>
 
@@ -283,7 +286,7 @@ static int  Control         (stream_t *p_stream, int i_query, va_list args)
             break;
         }
         case STREAM_GET_PTS_DELAY:
-            *va_arg (args, int64_t *) =
+            *va_arg (args, int64_t *) = INT64_C(1000) *
                 var_InheritInteger(p_stream, "network-caching");
              break;
 
