modules/stream_filter/httplive.c
@@ -2686,7 +2686,7 @@ static int Control(stream_t *s, int i_query, va_list args)
             *(va_arg (args, uint64_t *)) = GetStreamSize(s);
             break;
         case STREAM_GET_PTS_DELAY:
-            *va_arg (args, int64_t *) =
+            *va_arg (args, int64_t *) = INT64_C(1000) *
                 var_InheritInteger(s, "network-caching");
              break;
         default:
