modules/stream_filter/smooth/smooth.c
@@ -758,7 +758,7 @@ static int Control( stream_t *s, int i_query, va_list args )
             *(va_arg( args, uint64_t * )) = FAKE_STREAM_SIZE;
             break;
         case STREAM_GET_PTS_DELAY:
-            *va_arg (args, int64_t *) =
+            *va_arg (args, int64_t *) = INT64_C(1000) *
                 var_InheritInteger(s, "network-caching");
              break;
         default:
